# python-CICD-fastapi-basic

./: .coverage  .env  .gitignore  Dockerfile  README.md  config.yaml  docker-build.sh  docker-compose.yml  docker-run-entrypoints.sh  docker-run.sh  docker-tests.sh  injector.py  main.py  pyproject.toml  pytest.sh  service_start_run.sh
.circleci/: config.yml
.gha/Docker/Elasticsearch/: Dockerfile  entrypoint.sh
.github/workflows/: build-and-test-backup.yml_  build-and-test.yml  build-and-test.yml_own_dockerfile  slack-alert-backup.yml_  slack-alert.yml  slack-alert.yml_  slack.yml
.github/workflows/backup/: build-and-test.yml_
GHA_Docker/Elasticsearch/: entrypoint.sh
tests/: conftest.py  test_api.py  test_elasticsearch.py
