[tool.poetry]
name = "python-cicd-fastapi-basic"
version = "0.1.0"
description = ""
authors = ["euiyounghwang <marieuig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
pytz = "^2024.1"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
elasticsearch = "7.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
